# ComfyUI_XISER_Nodes

./: .gitignore  A级节点迁移计划.md  BATCH5_MIGRATION_SUMMARY.md  CONFIG_SYSTEM_GUIDE.md  IMAGE_MANAGER_V3_MIGRATION_SUMMARY.md  MANIFEST.in  MODEL_ADDITION_GUIDE.md  Qwen3-VL-8B-Instruct.ini.md  README.md  README_CN.md  TEST_PLAN.md  UPDATE_SUMMARY_2026.md  V3_Migration.md  V3_Migration_Progress.md  V3节点加载修复总结.md  VGM_NODE_README.md  Vue界面下鼠标事件问题处理方法.markdown  Wan_Video_Model_API_Instruction.md  __init__.py  __init__.py.v1_backup  api_events.json  comfyui-manager.json  extensions.py  jsconfig.json  nodes.py  package-lock.json  pyproject.toml  rename_mapping.py  requirements.txt  server_extension.py  test_actual_behavior.py  test_alpha_composite.py  test_birefnet_import.py  test_centering_fix.js  test_cleanup.py  test_connection.py  test_coordinate_system.js  test_core_functionality.py  test_final_verification.py  test_fix.py  (+29 more)
.claude/: CONVERSATION_MANAGEMENT.md  README.md  conversation_manager.py  conversation_manager_simple.py  setup.py  test_cleanup.py  test_cleanup_real.py  test_urgent_cleanup.py
.claude/commands/: cfetch.md  clean-history.md  conversation-stats.md  web-fetch.md
.claude/hooks/: pre_command.py
.github/workflows/: publish_action.yml
config/: llm_models.yaml  video_models.yaml
src/xiser_nodes/: XIS_CoordinatePath.py  XIS_CreateShape.py  XIS_CurveEditor.py  XIS_MultiPointGradient.py  XIS_SetColor.py  XIS_ShapeAndText.py  XIS_ShapeData.py  __init__.py  adjust_image.py  adjust_image_v3.py  adjustment_algorithms.py  adjustment_utils.py  canvas.py  canvas_mask_processor.py  canvas_mask_processor_v3.py  canvas_v3.py  coordinate_path_v3.py  curve_editor_v3.py  data_processing.py  data_processing_v3.py  debug_base64.txt  dynamic_image_inputs.py.v1_backup  dynamic_image_inputs_v3.py  dynamic_pack_images.py  dynamic_pack_images_v3.py  image_and_mask.py  image_and_mask_v3.py  image_manager_node.py  image_manager_v3.py  image_preview.py  image_preview_v3.py  image_puzzle.py  image_puzzle_v3.py  key_store.py  label.py  label_v3.py  list_processing.py  list_processing_v3.py  llm_v3.py  logic.py  (+26 more)
tests/: __init__.py  test_xiser_nodes.py
web/: LLM_NodeUI.js  XIS_CoordinatePath.js  XIS_CreateShape_Konva.js  XIS_CurveEditor.js  XIS_CurveEditor_canvas.js  XIS_MultiPointGradient.js  XIS_MultiPointGradient_canvas.js  XIS_SetColor.js  adjust_image.js  adjust_image_reset.js  canvas.js  canvas_adjust.js  canvas_history.js  canvas_images.js  canvas_konva.js  canvas_mask_processor.js  canvas_state.js  canvas_ui.js  changeNodeColor.js  coordinate_path.js  curve_editor.js  dynamic_image_inputs.js  dynamic_image_inputs.js.backup  dynamic_pack_images.js  image_manager_ui.js  image_preview.js  index.js  label_ui.js  llm_key_manager.js  llm_node_ui.js  llm_node_ui_config.js  multi_point_gradient.js  multi_point_gradient_canvas.js  multiple_angles_prompt.js  multiple_angles_prompt_canvas.js  prompts_with_switches.js  psd_upload.js  reorder_images.js  set_color.js  shape_and_text_konva.js  (+14 more)
web/canvas/: adjustment_algorithms.js  adjustment_utils.js  canvas_adjust.js  canvas_history.js  canvas_images.js  canvas_konva.js  canvas_state.js  canvas_ui.js  layer_store.js
web/curve_editor_canvas/: canvas.js  config.js  curve_math.js  display.js  dom.js  index.js  input_listeners.js  point_count.js  render.js
workflow/: Canvas_Config_Example.json  Canvas_Node_Chaining.json  CreateShape_CurveEditor_CoordinatePath.json  Image_Classification_Management.json  Images_to_Canvas.json  LLM_Qwen_Image_Edit_Plus.json  PSD_to_Canvas.json  PSD_to_Canvas_and_Inpaint_by_Qwen_Image.json  Puzzle_Image_Nodes.json  ShapeAndText_Node_Workflow.json  ShapeAndText_and_ImageManager_and_Puzzle.json  Shape_Animation.json  VGM_Orchestrator_API_Generates_Videos.json  Workflow_example.json  XIS_Canvas_Workflow.json
(+103 files in other folders)
