[project]
name = "ComfyUI_XISER_Nodes"
description = "This extension integrates interactive multi-layer canvas editing, multimodal LLM intelligent processing, professional-grade image processing toolchains, and visual data tools, providing end-to-end support for AI image generation workflows from creative conception to fine editing. With advanced PSD import, BiRefNet intelligent matting, real-time layer transformations, and secure API key management, it significantly enhances creative efficiency and output quality."
version = "1.3.8"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/grinlau18/ComfyUI_XISER_Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "xiser"
DisplayName = "ComfyUI_XISER_Nodes"
Icon = ""
